Fixed Glossary display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,7 @@ body {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    position: relative;
-    margin-top: 120px;
+    margin-top: 100px;
 }
 
 .themedescription {
